Refactor clienteController turn all endpoints to ResponseEntity as return value + EjercicioController main GET and POST endpoints + created DTOS for componentes de entrenamiento anidados